--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "mysql-connector-java-5.1.18-bin.jar"
+        "mysql-connector-java-5.1.18-bin.jar",
+        "pdfbox-3.0.2.jar",
+        "fontbox-3.0.2.jar"
     ]
 }
