--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "lib/**/*.jar",
         "mysql-connector-java-5.1.18-bin.jar",
         "pdfbox-3.0.2.jar",
-        "fontbox-3.0.2.jar"
+        "fontbox-3.0.2.jar",
+        "commons-logging-1.3.2.jar"
     ]
 }
