--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "mysql-connector-java-5.1.18-bin.jar",
         "pdfbox-3.0.2.jar",
         "fontbox-3.0.2.jar",
-        "commons-logging-1.3.2.jar"
+        "commons-logging-1.3.2.jar",
+        "pdfbox-2.0.31.jar",
+        "fontbox-2.0.31.jar"
     ]
 }
